manifests/database/service.yml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app: database
  ports:
    - port: 8000
      targetPort: 8000
