manifests/database/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: database-ingress
spec:
  rules:
  - host: db.bestbuds.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: database-service
            port:
              number: 8000
